tests/paczka1/fuzzy1/16871113.err
Error in line 4: A953 A809 82,2
Error in line 14: LXsRsvYst S846 92,9
Error in line 24: U0ktgys S261 26,3
